# Us-baddie

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  config.cmake
cmake/: TargetArmGcc.cmake  TargetStm32f1.cmake  TargetUsbad.cmake
cmake/config/: config_common.cmake  config_usbad_common.cmake  config_usbad_debug.cmake  config_usbad_release.cmake
doc/: development.md
lib/: CMakeLists.txt
lib/cmsis5/: CMakeLists.txt
lib/stm32cubef1/: CMakeLists.txt
schematics/simulations/opamp_simulation/OpAmpSimulation/: OpAmpSimulation.kicad_sch  OpAmpSimulation.wbk
schematics/stm32f030_adc/: #auto_saved_files#  OpAmp.kicad_sch  stm32f030_adc.kicad_prl  stm32f030_adc.kicad_pro  stm32f030_adc.kicad_sch
src/: CMakeLists.txt  us_assert.h  us_error.h
src/application/default/: debug_adc_usb.c  main.c  target.h
src/common/: CMakeLists.txt
src/common/application/: main.c
src/common/hal/: adc.h  dma.h  uart.h
src/common/utility/: buffer.c  buffer.h  chelp.h  debug.c  debug.h  fifo.h  ring_buffer.c  ring_buffer.h  usvprintf.h
src/driver/usb_microphone/: audio.c  audio.h  descriptors_audio.s  stereo.c  stereo.h  stub.c  stub.h  usb_control.c  usb_control.h  usb_isoch.c  usb_isoch.h  usb_microphone.c  usb_microphone.h
src/hal/: adc.h  dma.h  uart.h  usb.h
src/hal/usb/: UsbDevice.hpp
src/system/: stat.c  stat.h  time.h
src/utility/: cbprintf.c  cbprintf.h  debug.c  debug.h  debug_regdump.h  fifo.h  ushelp.h  usvprintf.c
test/ring_buffer_test/: CMakeLists.txt  Makefile  main.cpp  utility
tools/: vscode_jlink_script.txt
